Bug 90352 - Calc error when graphing data with source format
Summary: Calc error when graphing data with source format
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3 Daily
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Dennis Francis
URL:
Whiteboard: target:6.0.0 target:5.4.1
Keywords: bibisected, bisected, regression
: 92719 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-03-30 15:50 UTC by Sam
Modified: 2017-08-02 06:41 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
[Bug 90352] Calc error when graphing data with source format (868.00 KB, application/vnd.ms-excel)
2015-03-30 18:45 UTC, Sam
Details
[Bug 90352] Calc error when graphing data with source format (399.13 KB, image/png)
2015-03-30 18:47 UTC, Sam
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sam 2015-03-30 15:50:21 UTC
Hello!

When using LO (v4.3 or 4.4) Calc and graphing data, the **source format** is auto-checked (when it was not previously on pre-existing spreadsheets using LO v4.2) on the Y-Axis.  When this is unchecked and 1234.1 is selected, everything graphs properly on Y-Axis.  When the spreadsheet is saved, closed, and then reopened, the Y-Axis defaults again to Source Format 1234.

This only occurs in LO v4.3 and 4.4 versions.  When using LO 4.2 or previous, I don't have that issue.  Has something changed in the new versions that I need to change somewhere else, or is this a bug?  I am using a 13" MBP retina on OSX 10.9.5

In advance, many thanks for your time! :-)

Sam
Comment 1 Alex Thurgood 2015-03-30 16:37:46 UTC
@Sam : please provide us with a test document and step by step instructions to attempt to reproduce the problem. I have no idea, for example, where this "Source format" tickbox appears, as I don't use Calc very often.

Setting to NEEDINFO pending requested information, please set back to unconfirmed once you have provided it.
Comment 2 Sam 2015-03-30 18:45:07 UTC
Created attachment 114473 [details]
[Bug 90352] Calc error when graphing data with source format

Hi Alex. Thanks for response.  Attached is a copy of LO 4.4.1 with a sample of calc doc.  Basically, on the “Y” Axis, you click it to be able to access the settings.  That’s where the Source Format box is.  Additionally, the problem appears to be only when the document is saved .xls format. If I save it .odt, it seems to work fine.  I just discovered that in preparing to send over this document to you.  I will send under separate copy the screenshots.  Couldn't figure out how to send multiple attachments

I hope this is helpful.  Many thanks!

Sam
Comment 3 Sam 2015-03-30 18:47:32 UTC
Created attachment 114474 [details]
[Bug 90352] Calc error when graphing data with source format

Screenshot
Comment 4 A (Andy) 2015-03-30 20:19:47 UTC
Reproducible with LO 4.4.1.2, Win 8.1

Steps Done:
1. Open the attached xls file
2. Make a double left mouse click on the graph "Good Nights vs. Fatigue"
3. Make a double left mouse click on the Y-axis
4. Go to the tab NUMBERS and deselect "Source format"
5. Select in the section Format "1234.1" and press OK

Interim Result: Number format is changed to X.0

6. Go to FILE -> SAVE AS and save the file as a xls file and close it
7. Reopen the saved file

Result: The number format is not kept and changed back to X instead of X.0.
Comment 5 Alex Thurgood 2015-03-31 14:04:14 UTC
Confirming also on

Version: 4.4.1.2
Build ID: 45e2de17089c24a1fa810c8f975a7171ba4cd432
Locale : fr_
Comment 6 Alex Thurgood 2015-03-31 14:05:15 UTC
Not a blocker though, don't even know if this is a regression yet.
Comment 7 Alex Thurgood 2015-03-31 14:11:39 UTC
Regression confirmed over 
Version: 4.1.4.2
Build ID: 0a0440ccc0227ad9829de5f46be37cfb6edcf72

When I open the XLS file in that version, the Source format is not ticked.
Comment 8 Alex Thurgood 2015-03-31 14:18:52 UTC
Confirming on 

Version: 4.4.2.2
Build ID: c4c7d32d0d49397cad38d62472b0bc8acff48dd6
Locale: fr_

with IT langpack

The IT langpack doesn't show any hunspell dictionary as being installed, only the OSX dictionary
Comment 9 Alex Thurgood 2015-03-31 14:21:12 UTC
A workaround seems to be to delete the user profile and re-install the langpack, but this is represents an unplanned configuration change between point releases, so probably not acceptable (if I have understood the principle correctly)
Comment 10 Alex Thurgood 2015-03-31 14:21:50 UTC
(In reply to Alex Thurgood from comment #9)
> A workaround seems to be to delete the user profile and re-install the
> langpack, but this is represents an unplanned configuration change between
> point releases, so probably not acceptable (if I have understood the
> principle correctly)

Arrgh, forget those last two comments, wrong bug !!
Comment 11 Matthew Francis 2015-04-13 08:56:08 UTC
This began at the below commit.

commit 1d38cb365543924f9c50014e6b2227e77de1d0c9
Author: Kohei Yoshida <kohei.yoshida@collabora.com>
Date:   Fri Jun 13 11:12:50 2014 -0400

    fdo#71076, fdo#71767: Preserve number formats when charts are copied.
    
    Change-Id: If5ae8852152012483237e7602e56a0c46ea8748a
Comment 12 Robinson Tryon (qubit) 2015-12-13 11:12:15 UTC Comment hidden (obsolete)
Comment 13 Xisco Faulí 2016-09-24 14:29:48 UTC
*** Bug 92719 has been marked as a duplicate of this bug. ***
Comment 14 Robert Großkopf 2016-09-24 18:49:57 UTC
(In reply to Xisco Faulí from comment #13)
> *** Bug 92719 has been marked as a duplicate of this bug. ***

No, it isn't.

Bug 92719 could only be reproduced with *.xls-Documents, not with *.ods. Bug 92719 is a bug, witch appears in the charts of a report (created Writer-document) and has has something to do with wrong interpreting of the source-format. A date appears instead of a number.
Comment 15 Xisco Faulí 2016-10-03 09:23:41 UTC
Adding Cc: to Kohei Yoshida
Comment 16 Commit Notification 2017-08-02 05:46:11 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d8e731adb8608aab17385e02f4441ed3122efa40

tdf#90352: set/handle LinkNumberFormatToSource property in xls...

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2017-08-02 06:34:41 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=adf049390cceb11df6ba438f30138d6f92d13b41&h=libreoffice-5-4

tdf#90352: set/handle LinkNumberFormatToSource property in xls...

It will be available in 5.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.