tdf#90352: set/handle LinkNumberFormatToSource property in xls...

Import/Export filter respectively for axis numbers. For ods and
xlsx this was already getting set/handled correctly.

Also add unit test to assert LinkNumberFormatToSource property
and number format for import and export-import roundtrip.

Change-Id: Id029ac7d0233ca490a6a00609e9cea8fdafee70f
Reviewed-on: https://gerrit.libreoffice.org/40577
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>